plugins {
  id 'java'
  alias(libs.plugins.springBoot)
  alias(libs.plugins.springDependencyManagement)
  id 'jacoco'
  alias(libs.plugins.spotless)
}

group = 'com.davidjlynn'
version = '0.0.1-SNAPSHOT'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

configurations {
  compileOnly {
    extendsFrom annotationProcessor
  }
}

repositories {
  mavenCentral()
}

ext {
  set('springShellVersion', "3.3.3")
}

dependencies {
  implementation 'org.springframework.shell:spring-shell-starter'
  compileOnly 'org.projectlombok:lombok'
  annotationProcessor 'org.projectlombok:lombok'
  testImplementation 'org.springframework.boot:spring-boot-starter-test'
  testImplementation 'org.springframework.shell:spring-shell-starter-test'
  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

dependencyManagement {
  imports {
    mavenBom "org.springframework.shell:spring-shell-dependencies:${springShellVersion}"
  }
}

tasks.named('test') {
  useJUnitPlatform()
}

spotless {
  format 'misc', {
    target '.gitattributes', '.gitignore'
    trimTrailingWhitespace()
    indentWithSpaces(2)
    endWithNewline()
  }
  java {
    importOrder()
    removeUnusedImports()
    googleJavaFormat()
    formatAnnotations()
  }
  groovyGradle {
    greclipse().configFile('spotless.gradle.greclipse.properties')
  }
}
